Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,6 @@ pool:
     resourceGroupName: 'javaapprg'
     location: 'West US'
     templateLocation: 'Linked artifact'
+    csmFile: 'template.json'
+    csmParametersFile: 'parameter.json'
     deploymentMode: 'Incremental'
-    
